samples/_failures_safe/1761140634_ca2c31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dead9844.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_dead9844.c:164:39: error: missing terminating " character
  164 |         case TOKEN_IDENTIFIER: printf("IDENT
      |                                       ^~~~~~
./samples/SAFE/__tmp_dead9844.c:164:9: error: expected expression at end of input
  164 |         case TOKEN_IDENTIFIER: printf("IDENT
      |         ^~~~
./samples/SAFE/__tmp_dead9844.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dead9844.c:164:9: error: expected declaration or statement at end of input
